<resources>
    <string name="app_name">AppRetention</string>
    <string name="app_more">后台应用留存能力加强，Hook防杀。\nby:焕晨HChen</string>
    <string name="restart_quick">快速重启作用域</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="reboot">重启系统</string>
    <string name="qreboot">快速重启</string>
    <string name="re_powerkeeper">电量和性能</string>
    <string name="soft_reboot">重启 </string>
    <string name="restart_app_desc1">确定要立即重启</string>
    <string name="restart_app_desc2">吗？</string>
    <string name="cancel">已取消重启</string>
    <string name="sucess">成功重启 </string>
    <string name="tip">提示</string>
    <string name="all">全选</string>
    <string name="lla">反选</string>
    <string name="kill_failed">结束进程失败，请检查是否授予了 Root/Su 权限?</string>
    <string name="reboot_failed">重启失败，请检查是否授予了 Root/Su 权限?</string>
    <string name="text">Text</string>
    <!--SystemService Hook-->
    <string name="system_service">系统框架</string>
    <string name="system_service_hook">系统框架总开关</string>
    <string name="checkExcessivePowerUsage">关闭CPU超时检查</string>
    <string name="killPids">关闭killPids功能</string>
    <string name="killProcessesBelowAdj">禁止清理低Adj进程</string>
    <string name="killAllBackgroundProcesses">禁止kill全部后台</string>
    <string name="performIdleMaintenance">关闭系统空闲清理功能</string>
    <string name="killAppIfBgRestrictedAndCachedIdleLocked">禁止清理后台受限的程序</string>
    <string name="getAppStartModeLOSP">关闭后台服务限制</string>
    <string name="updateBackgroundRestrictedForUidPackageLocked">解除程序后台限制</string>
    <string name="runKillAll">禁止通过命令停止程序</string>
    <string name="OomAdjuster">禁止修剪进程</string>
    <string name="trimPhantomProcessesIfNecessary">禁止修剪虚幻进程</string>
    <string name="RecentTasks">禁止修剪后台任务卡片</string>
    <string name="LowMemDetector">虚报内存压力为低</string>
    <string name="setMemFactorOverride">禁止AppProfiler逻辑</string>
    <string name="ActivityManagerConstants">取消最大进程限制</string>
    <!--MiuiService Hook-->
    <string name="miui_service">Miui框架</string>
    <string name="miui_service_hook">Miui框架总开关</string>
    <string name="ScoutDisplayMemoryManager">关闭Scout功能</string>
    <string name="ScoutHelper">关闭ScoutHelper</string>
    <string name="reclaimMemoryForGameIfNeed">禁止打开游戏时清理内存</string>
    <string name="PeriodicCleanerService">关闭定时清理功能</string>
    <string name="SystemPressureController">关闭内存压力控制器</string>
    <string name="ProcessKillerIdler">禁止启动定时清理功能</string>
    <string name="handleAutoLockOff">禁止息屏清理</string>
    <string name="handleThermalKillProc">禁止温度过高清理</string>
    <!-- <string name="handleMessage">禁止响应清理</string>-->
    <string name="ProcessMemoryCleaner">置空killProcess方法</string>
    <string name="CameraBooster">禁止启动相机时杀后台</string>
    <string name="SmartCpuPolicyManager">禁止CPU使用检查</string>
    <!--<string name="run">禁止执行run方法</string>-->
    <string name="MiuiMemoryService">关闭MiuiMemoryService功能</string>
    <string name="MiuiMemReclaimer">关闭MiuiMemReclaimer功能</string>
    <string name="PressureStateSettings">关闭spc功能</string>
    <!--PowerKeeper Hook-->
    <string name="powerkeeper">电量和性能</string>
    <string name="powerkeeper_hook">电量和性能总开关</string>
    <string name="ProcessManager">禁止电量和性能kill进程</string>
</resources>