<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="小米框架">
        <SwitchPreference
            android:defaultValue="true"
            android:key="prefs_key_miui_service"
            android:title="@string/miui_service_hook" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_ScoutDisplayMemoryManager"
            android:title="@string/ScoutDisplayMemoryManager" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_ScoutHelper"
            android:title="@string/ScoutHelper" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_reclaimMemoryForGameIfNeed"
            android:title="@string/reclaimMemoryForGameIfNeed" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_PeriodicCleanerService"
            android:title="@string/PeriodicCleanerService" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_SystemPressureController"
            android:title="@string/SystemPressureController" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_ProcessKillerIdler"
            android:title="@string/ProcessKillerIdler" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_handleAutoLockOff"
            android:title="@string/handleAutoLockOff" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_handleThermalKillProc"
            android:title="@string/handleThermalKillProc" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_ProcessMemoryCleaner"
            android:title="@string/ProcessMemoryCleaner" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_CameraBooster"
            android:title="@string/CameraBooster" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_SmartCpuPolicyManager"
            android:title="@string/SmartCpuPolicyManager" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_MiuiMemoryService"
            android:title="@string/MiuiMemoryService" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_MiuiMemReclaimer"
            android:title="@string/MiuiMemReclaimer" />
        <SwitchPreference
            android:autoSizePresetSizes=""
            android:defaultValue="true"
            android:dependency="prefs_key_miui_service"
            android:key="prefs_key_PressureStateSettings"
            android:title="@string/PressureStateSettings" />
    </PreferenceCategory>


</PreferenceScreen>